Set font size to 1.4rem, container width to 1200px

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,9 +1,10 @@
 body {
   color: black;
   font-size: 10px;
+  font-size: 1.4rem;
 }
 
 .app-wrapper {
-  width: 800px;
+  width: 1200px;
   margin: 0 auto;
 }
